--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Neuroinformatics Lab</a>
+      <a class="navbar-brand" href="index.html">Computational Neurobiology Lab</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -199,8 +199,8 @@ $(document).ready(function () {
 </div>
 
 
-<div id="neuroinformatics-laboratory" class="section level1">
-<h1>Neuroinformatics Laboratory</h1>
+<div id="computational-neurobiology-laboratory" class="section level1">
+<h1>Computational Neurobiology Laboratory</h1>
 <div id="centre-for-mental-health-and-addiction-camh" class="section level4">
 <h4>Centre for Mental Health and Addiction (<a href="http://www.camh.ca/">CAMH</a>)</h4>
 <p>We seek to understand diseases of the brain by mining neuroscience resources for deeper insight into brain anatomy, development and illness. Informatics methods are used to exploit the increasing amount of neuroscience data. Specifically, we focus on connectivity, gene expression and epigenetics across the genome and the brain. We employ multifaceted approaches that gain information by using data that crosses scales and species.</p>
