--- a/toolsAndData.html
+++ b/toolsAndData.html
@@ -49,6 +49,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 
 
+<link rel="stylesheet" href="includes/main.css" type="text/css" />
 
 </head>
 
@@ -175,7 +176,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Neuroinformatics Lab</a>
+      <a class="navbar-brand" href="index.html">Computational Neurobiology Lab</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
