--- a/toolsAndData.html
+++ b/toolsAndData.html
@@ -23,10 +23,11 @@
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-75471277-1', 'auto');
+  ga('create', 'UA-76258414-1', 'auto');
   ga('send', 'pageview');
+
 </script>
 
 <style type="text/css">code{white-space: pre;}</style>
