added Dr. Vincent location

--- a/research.html
+++ b/research.html
@@ -231,7 +231,7 @@ $(document).ready(function () {
 <li>Drs. Tomáš Paus and Zdenka Pausova in Toronto (my postdoctoral supervisors): population neuroscience, epigenetics and axon transport</li>
 <li>Drs. Franziska Wagner and Rüdiger W Veh in Germany: gene expression analyses in the habenula</li>
 <li>Dr. Noa Liscovitch in Israel: coexpression analyses of SNCA in Parkinson’s disease</li>
-<li>Dr. John Vincent: expression analyses of genes associated with autism and intellecutal disability</li>
+<li>Dr. John B. Vincent in Toronto: expression analyses of genes associated with autism and intellecutal disability</li>
 <li>Dr. Etienne Sibille in Toronto: neurobiology of depression and aging</li>
 <li>Dr. Paul Pavlidis in Vancouver (my PhD supervisor): bioinformatics for neuroanatomical connectivity</li>
 <li>Yohan Yee: text mining for Psychiatry</li>
