--- a/research.html
+++ b/research.html
@@ -161,7 +161,7 @@ $(document).ready(function () {
 <div class="container-fluid main-container">
 
 <!-- tabsets -->
-<script src="libs/navigation-1.0/tabsets.js"></script>
+<script src="libs/navigation-1.1/tabsets.js"></script>
 <script>
 $(document).ready(function () {
   window.buildTabsets("TOC");
@@ -210,10 +210,21 @@ $(document).ready(function () {
 <div id="research-interests" class="section level2">
 <h2>Research Interests</h2>
 <p>Broadly, we are interested in helping integrate epigenomic, transcriptomic, genetic, connectivity, imaging, clinical and epidemiological data related to the neurobiology of psychiatric disorders.</p>
+<div id="integrative-neuroinformatics-for-neuroanatomy" class="section level3">
+<h3>Integrative Neuroinformatics for Neuroanatomy</h3>
+<p>Over $400 million has been spent on the creation of comprehensive gene expression, connectivity and methylation atlases of the mouse and the human brain. In five years, more data will be available from the Allen Institute for Brain Science, the Human Connectome Project, the BRAIN Initiatives, and the European Human Brain Project. We create methods and tools that will leverage this new data for fast analyses of neuroanatomy. Our first aim is to provide maps of where (in the brain) and when (during development) genes are expressed in the mouse and the human brain. Currently, tools for polygenic expression analysis are not available to scientists without advanced computational backgrounds. We seek to complement the large and expensive gene expression atlases with free online tools for polygenic mapping of the brain. Prototype versions of these tools are <a href="./toolsAndData.html">avaiable</a>. New versions will include tests for cell type specific patterns and expression datasets from the UK Brain Expression Consortium and the NIH Blueprint Non-Human Primate Atlas.</p>
+</div>
+<div id="region-and-layer-specific-gene-expression-markers" class="section level3">
+<h3>Region and layer specific gene expression markers</h3>
+<p>We seek to characterize the genome across the major brain units of cell type, cortical layer, and brain region. Several independent datasets from mouse, macaque, and human have assayed gene expression across these units. We plan to combine them to form an integrated dataset that will be used to both model neuroanatomy and extract biomarkers.</p>
+</div>
 <div id="polygenic-expression-mapping" class="section level3">
 <h3>Polygenic expression mapping</h3>
-<p>Over $400 million has been spent on the creation of comprehensive gene expression, connectivity and methylation atlases of the mouse and the human brain. In five years, more data will be available from the Allen Institute for Brain Science, the Human Connectome Project, the BRAIN Initiatives, and the European Human Brain Project. We will create methods and tools that will leverage this new data for fast analyses of neuroanatomy. Our first aim is to provide maps of where (in the brain) and when (during development) genes are expressed in the mouse and the human brain. Currently, tools for polygenic expression analysis are not available to scientists without advanced computational backgrounds. We seek to complement the large and expensive gene expression atlases with free online tools for polygenic mapping of the brain. Prototype versions of these tools are <a href="./toolsAndData.html">avaiable</a>. New versions will include tests for cell type specific patterns and expression datasets from the UK Brain Expression Consortium and the NIH Blueprint Non-Human Primate Atlas.</p>
-<p>Decoding the genome has allowed us to discover associations between specific genes and diseases, as well as to measure expression of all genes in the genome in a specific tissue. Common mental illnesses are complex, caused by many genes possibly interacting with various environmental factors. Compounding this etiological complexity is the heterogeneity of gene expression in the brain, with over 75% of genes differentially expressed across brain regions or time. Many of the genes associated with mental illness have unknown roles. While many scientists are zooming in on these genes, they focus on specific brain regions at a specific age for a single gene. We use computational aproaches to complement targeted efforts with whole brain and genome perspectives. Using the prototype tools, we have discovered that genes previously associated with schizophrenia, autism, Parkinson’s disease, cardiovascular health, low early-life social class and human well-being are specifically expressed in brain regions of interest. We plan on extending these findings in the Neuroinformatics labratory.</p>
+<p>Decoding the genome has allowed us to discover associations between specific genes and diseases, as well as to measure expression of all genes in the genome in a specific tissue. Common mental illnesses are complex, caused by many genes possibly interacting with various environmental factors. Compounding this etiological complexity is the heterogeneity of gene expression in the brain, with over 75% of genes differentially expressed across brain regions or time. Many of the genes associated with mental illness have unknown roles. While many scientists are zooming in on these genes, they focus on specific brain regions at a specific age for a single gene. We use computational approaches to complement targeted efforts with whole brain and genome perspectives. Using the prototype tools, we have discovered that genes previously associated with schizophrenia, autism, Parkinson’s disease, cardiovascular health, low early-life social class and human well-being are specifically expressed in brain regions of interest. We plan on extending these findings in the Neuroinformatics laboratory.</p>
+</div>
+<div id="understanding-mr-images-from-the-transcriptomic-perspective" class="section level3">
+<h3>Understanding MR images from the transcriptomic perspective</h3>
+<p>Integration of neuroimaging measurements with information from genomic studies provides new molecular perspectives can reveal specific tissue characteristics across neuroanatomy. Once brain images are projected translated into genes it is possible to test for enriched biological processes, cell type markers, and subcellular locations. Brain region specific analyses can be performed to help determine if a region’s neuroanatomical structure is defined by dynamic brain activity or the slower scale of molecular transcription.</p>
 </div>
 <div id="parkinsons-disease" class="section level3">
 <h3>Parkinson’s disease</h3>
@@ -221,7 +232,7 @@ $(document).ready(function () {
 </div>
 <div id="text-mining" class="section level3">
 <h3>Text mining</h3>
-<p>We are interested in using written text to better characterize mental health and addiction. This work is supported by the increasing amounts of our communications at that are archived online. Inspiration is provided by work that has examined novels for markers of congnitive decline <a href="http://llc.oxfordjournals.org/content/26/4/435.full">(Le, Lancashire, Hirst and Jokel, 2011)</a> and tweets of mothers for postpartum language changes <a href="http://research.microsoft.com/en-us/um/people/horvitz/predicting_postpartum_changes_chi_2013.pdf">(Choudhury, Counts and Horvitz, 2013)</a>.</p>
+<p>We are interested in using written text to better characterize mental health and addiction. This work is supported by the increasing amounts of our communications at that are archived online. Inspiration is provided by work that has examined novels for markers of cognitive decline <a href="http://llc.oxfordjournals.org/content/26/4/435.full">(Le, Lancashire, Hirst and Jokel, 2011)</a> and tweets of mothers for postpartum language changes <a href="http://research.microsoft.com/en-us/um/people/horvitz/predicting_postpartum_changes_chi_2013.pdf">(Choudhury, Counts and Horvitz, 2013)</a>.</p>
 </div>
 </div>
 <div id="collaborators" class="section level2">
