--- a/members.html
+++ b/members.html
@@ -161,7 +161,7 @@ $(document).ready(function () {
 <div class="container-fluid main-container">
 
 <!-- tabsets -->
-<script src="libs/navigation-1.0/tabsets.js"></script>
+<script src="libs/navigation-1.1/tabsets.js"></script>
 <script>
 $(document).ready(function () {
   window.buildTabsets("TOC");
@@ -207,6 +207,9 @@ $(document).ready(function () {
 </div>
 
 
+<!---
+This is really annying to edit - the tables are really finicky about spaces
+-->
 <div id="leon-french-principal-investigator" class="section level3">
 <h3>Leon French, Principal Investigator</h3>
 <table>
@@ -217,13 +220,39 @@ $(document).ready(function () {
 <tbody>
 <tr class="odd">
 <td align="left"><div class="figure">
-<img src="images/Leon.picture.jpg" />
+<img src="images/Leon.picture.jpg" alt="" />
+
 </div></td>
-<td align="left"><p><b>Independent Scientist, Campbell Family Mental Health Research Institute at CAMH</b><br /><b>Assistant Professor (status only), Department of Psychiatry, University of Toronto</b><br />Toronto, Ontario, Canada<br /> <a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a><br /> <a href="https://ca.linkedin.com/in/leonfrench">LinkedIn profile</a><br /> <a href="https://scholar.google.ca/citations?hl=en&amp;user=zBJxfPEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Publication list on Google Scholar</a><br /> <a href="https://www.researchgate.net/profile/Leon_French">ResearchGate profile</a></p></td>
+<td align="left"><p><b>Independent Scientist, Campbell Family Mental Health Research Institute at CAMH</b><br />
+<b>Assistant Professor (status only), Department of Psychiatry, University of Toronto</b><br />
+Toronto, Ontario, Canada<br />
+ <a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a><br />
+ <a href="https://ca.linkedin.com/in/leonfrench">LinkedIn profile</a><br />
+ <a href="https://scholar.google.ca/citations?hl=en&amp;user=zBJxfPEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Publication list on Google Scholar</a><br />
+ <a href="https://www.researchgate.net/profile/Leon_French">ResearchGate profile</a></p></td>
+</tr>
+</tbody>
+</table>
+<div id="jacob-ritchie-undergraduate-researcher" class="section level4">
+<h4>Jacob Ritchie, Undergraduate Researcher</h4>
+<table>
+<colgroup>
+<col width="41%" />
+<col width="58%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left"><div class="figure">
+<img src="https://i.stack.imgur.com/okDq7t.jpg" alt="" />
+
+</div></td>
+<td align="left"><p><b>Engineering Science, University of Toronto</b><br />
+ <a href="mailto:jacob.ritchie@mail.utoronto.ca">jacob.ritchie@mail.utoronto.ca</a></p></td>
 </tr>
 </tbody>
 </table>
 <p>More to come (please see <a href="./positions.html">positions</a>)</p>
+</div>
 </div>
 
 
