--- a/members.html
+++ b/members.html
@@ -207,7 +207,7 @@ $(document).ready(function () {
 
 
 <!---
-This is really annying to edit - the tables are really finicky about spaces -maybe convert to something else - r markdown?
+This is really annoying to edit - the tables are really finicky about spaces - maybe convert to something else - r markdown?
 -->
 <div id="leon-french-principal-investigator" class="section level3">
 <h3>Leon French, Principal Investigator</h3>
@@ -224,7 +224,7 @@ This is really annying to edit - the tables are really finicky about spaces -may
 </div></td>
 <td align="left"><p><b>Independent Scientist, Campbell Family Mental Health Research Institute at CAMH</b><br />
 <b>Assistant Professor (status only), Department of Psychiatry, University of Toronto</b><br />
-<b>Associate Member, Institute of Medical Science, University of Toronto</b><br />
+<b>Restricted Associate Member (PAC), Institute of Medical Science, University of Toronto</b><br />
 Toronto, Ontario, Canada<br />
  <a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a><br />
  <a href="https://ca.linkedin.com/in/leonfrench">LinkedIn profile</a><br />
