Fixed spacing by adding padding

--- a/members.html
+++ b/members.html
@@ -208,6 +208,7 @@ $(document).ready(function () {
 
 <!---
 This is really annoying to edit - the tables are really finicky about spaces - maybe convert to something else - r markdown?
+The table widths are relative to the longest column, hence the &nbsp; &nbsp; padding to make sure alignment is right
 -->
 <div id="leon-french-principal-investigator" class="section level3">
 <h3>Leon French, Principal Investigator</h3>
@@ -237,8 +238,8 @@ Toronto, Ontario, Canada<br />
 <h4>Derek Howard, Research Analyst</h4>
 <table>
 <colgroup>
-<col width="41%" />
-<col width="58%" />
+<col width="37%" />
+<col width="62%" />
 </colgroup>
 <tbody>
 <tr class="odd">
@@ -246,8 +247,9 @@ Toronto, Ontario, Canada<br />
 <img src="images/derek.jpeg" />
 
 </div></td>
-<td><p> <b>MSc, University of Toronto</b><br />
- derek(dot)howard(at)mail.utoronto.ca</p></td>
+<td><p><b>MSc, University of Toronto</b><br />
+d(dot)howard(at)mail.utoronto.ca<br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
@@ -260,8 +262,8 @@ Toronto, Ontario, Canada<br />
 <h4>Jacob Ritchie, Undergraduate Researcher</h4>
 <table>
 <colgroup>
-<col width="41%" />
-<col width="58%" />
+<col width="37%" />
+<col width="62%" />
 </colgroup>
 <tbody>
 <tr class="odd">
@@ -270,7 +272,8 @@ Toronto, Ontario, Canada<br />
 
 </div></td>
 <td><p><b>Engineering Science, University of Toronto</b><br />
- <a href="mailto:jacob.ritchie@mail.utoronto.ca">jacob.ritchie@mail.utoronto.ca</a></p></td>
+<a href="mailto:jacob.ritchie@mail.utoronto.ca">jacob.ritchie@mail.utoronto.ca</a><br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
