Added Justin and instructions link

--- a/members.html
+++ b/members.html
@@ -253,6 +253,23 @@ d(dot)howard(at)mail.utoronto.ca<br />
 </tr>
 </tbody>
 </table>
+</div>
+<div id="justin-lee-undergraduate-project-student" class="section level4">
+<h4>Justin Lee, Undergraduate project student</h4>
+<table>
+<colgroup>
+<col width="37%" />
+<col width="62%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td></td>
+<td><b>BCB and Statistics program, University of Toronto</b><br />
+<a href="mailto:chunhin.lee@mail.utoronto.ca">chunhin.lee@mail.utoronto.ca</a><br />
+                                                                                         </td>
+</tr>
+</tbody>
+</table>
 <p></p>
 </div>
 </div>
@@ -278,6 +295,7 @@ d(dot)howard(at)mail.utoronto.ca<br />
 </tbody>
 </table>
 <p>More to come (please see <a href="./positions.html">positions</a>)</p>
+<p><a href="https://github.com/computationalneurobiology/ComputationalNeurobiology.github.io/tree/master">Instructions to add yourself</a></p>
 </div>
 </div>
 
