Minor changes to members page

--- a/members.html
+++ b/members.html
@@ -210,8 +210,8 @@ $(document).ready(function () {
 This is really annoying to edit - the tables are really finicky about spaces - maybe convert to something else - r markdown?
 The table widths are relative to the longest column, hence the &nbsp; &nbsp; padding to make sure alignment is right
 -->
-<div id="leon-french-principal-investigator" class="section level3">
-<h3>Leon French, Principal Investigator</h3>
+<div id="leon-french-principal-investigator" class="section level4">
+<h4>Leon French, Principal Investigator</h4>
 <table>
 <colgroup>
 <col width="26%" />
@@ -223,17 +223,18 @@ The table widths are relative to the longest column, hence the &nbsp; &nbsp; pad
 <img src="images/Leon.picture.jpg" />
 
 </div></td>
-<td><div style="white-space: pre-line;"><b>Independent Scientist, Campbell Family Mental Health Research Institute at CAMH</b>
-<b>Assistant Professor (status only), Department of Psychiatry, University of Toronto</b>
-<b>Restricted Associate Member (PAC), Institute of Medical Science, University of Toronto</b>
-Toronto, Ontario, Canada
- <a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a>
- <a href="https://ca.linkedin.com/in/leonfrench">LinkedIn profile</a>
- <a href="https://scholar.google.ca/citations?hl=en&amp;user=zBJxfPEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Publication list on Google Scholar</a>
- <a href="https://www.researchgate.net/profile/Leon_French">ResearchGate profile</a></div></td>
+<td><p><b>Independent Scientist, Campbell Family Mental Health Research Institute at CAMH</b><br />
+<b>Assistant Professor (status only), Department of Psychiatry, University of Toronto</b><br />
+<b> Associate Member, Institute of Medical Science, University of Toronto</b><br />
+Toronto, Ontario, Canada<br />
+ <a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a><br />
+ <a href="https://ca.linkedin.com/in/leonfrench">LinkedIn profile</a><br />
+ <a href="https://scholar.google.ca/citations?hl=en&amp;user=zBJxfPEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Publication list on Google Scholar</a><br />
+ <a href="https://www.researchgate.net/profile/Leon_French">ResearchGate profile</a></p></td>
 </tr>
 </tbody>
 </table>
+</div>
 <div id="derek-howard-research-analyst" class="section level4">
 <h4>Derek Howard, Research Analyst</h4>
 <table>
@@ -247,15 +248,15 @@ Toronto, Ontario, Canada
 <img src="images/derek.jpeg" />
 
 </div></td>
-<td><div style="white-space: pre-line;"><b>MSc, University of Toronto</b>
-d(dot)howard(at)mail.utoronto.ca
-                                                                                         </div></td>
+<td><p><b>MSc, University of Toronto</b><br />
+d(dot)howard(at)mail.utoronto.ca<br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
 </div>
 <div id="justin-lee-undergraduate-project-student" class="section level4">
-<h4>Justin Lee, Undergraduate project student</h4>
+<h4>Justin Lee, Undergraduate Project Student</h4>
 <table>
 <colgroup>
 <col width="37%" />
@@ -264,15 +265,15 @@ d(dot)howard(at)mail.utoronto.ca
 <tbody>
 <tr class="odd">
 <td></td>
-<td><div style="white-space: pre-line;"><b>BCB and Statistics program, University of Toronto</b>
-<a href="mailto:chunhin.lee@mail.utoronto.ca">chunhin.lee@mail.utoronto.ca</a>
-                                                                                         </div></td>
+<td><b>BCB and Statistics program, University of Toronto</b><br />
+<a href="mailto:chunhin.lee@mail.utoronto.ca">chunhin.lee@mail.utoronto.ca</a><br />
+                                                                                         </td>
 </tr>
 </tbody>
 </table>
 </div>
 <div id="alana-man-undergraduate-project-student" class="section level4">
-<h4>Alana Man, Undergraduate project student</h4>
+<h4>Alana Man, Undergraduate Project Student</h4>
 <table>
 <colgroup>
 <col width="37%" />
@@ -284,14 +285,13 @@ d(dot)howard(at)mail.utoronto.ca
 <img src="images/alana.jpg" width="150" />
 
 </div></td>
-<td><div style="white-space: pre-line;"><b>BCB and Computer Science, University of Toronto</b>
-<a href="mailto:alana.man@mail.utoronto.ca">alana.man@mail.utoronto.ca</a>
-                                                                                         </div></td>
+<td><p><b>BCB and Computer Science, University of Toronto</b><br />
+<a href="mailto:alana.man@mail.utoronto.ca">alana.man@mail.utoronto.ca</a><br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
 <p></p>
-</div>
 </div>
 <div id="previous-members" class="section level3">
 <h3>Previous members</h3>
@@ -308,9 +308,9 @@ d(dot)howard(at)mail.utoronto.ca
 <img src="https://i.stack.imgur.com/okDq7t.jpg" />
 
 </div></td>
-<td><div style="white-space: pre-line;"><b>Engineering Science, University of Toronto</b>
-<a href="mailto:jacob.ritchie@mail.utoronto.ca">jacob.ritchie@mail.utoronto.ca</a>
-                                                                                         </div></td>
+<td><p><b>Engineering Science, University of Toronto</b><br />
+<a href="mailto:jacob.ritchie@mail.utoronto.ca">jacob.ritchie@mail.utoronto.ca</a><br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
