--- a/members.html
+++ b/members.html
@@ -20,8 +20,8 @@
 <script src="libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="libs/bootstrap-3.3.5/shim/respond.min.js"></script>
 <script src="libs/navigation-1.1/tabsets.js"></script>
-<link href="libs/highlightjs-1.1/default.css" rel="stylesheet" />
-<script src="libs/highlightjs-1.1/highlight.js"></script>
+<link href="libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
+<script src="libs/highlightjs-9.12.0/highlight.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -40,10 +40,12 @@
   }
 </style>
 <script type="text/javascript">
-if (window.hljs && document.readyState && document.readyState === "complete") {
-   window.setTimeout(function() {
-      hljs.initHighlighting();
-   }, 0);
+if (window.hljs) {
+  hljs.configure({languages: []});
+  hljs.initHighlightingOnLoad();
+  if (document.readyState && document.readyState === "complete") {
+    window.setTimeout(function() { hljs.initHighlighting(); }, 0);
+  }
 }
 </script>
 
@@ -287,6 +289,27 @@ d(dot)howard(at)mail.utoronto.ca<br />
 </div></td>
 <td><p><b>BCB and Computer Science, University of Toronto</b><br />
 <a href="mailto:alana.man@mail.utoronto.ca">alana.man@mail.utoronto.ca</a><br />
+                                                                                         </p></td>
+</tr>
+</tbody>
+</table>
+<p> </p>
+</div>
+<div id="jenny-yin-undergraduate-project-student" class="section level4">
+<h4>Jenny Yin, Undergraduate Project Student</h4>
+<table>
+<colgroup>
+<col width="37%" />
+<col width="62%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td><div class="figure">
+<img src="images/jenny.png" width="150" />
+
+</div></td>
+<td><p><b>BCB and Computer Science, University of Toronto</b><br />
+<a href="mailto:jenny.yin@mail.utoronto.ca">jenny.yin@mail.utoronto.ca</a><br />
                                                                                          </p></td>
 </tr>
 </tbody>
