Linked Justin's picture

--- a/members.html
+++ b/members.html
@@ -266,10 +266,11 @@ d(dot)howard(at)mail.utoronto.ca<br />
 </colgroup>
 <tbody>
 <tr class="odd">
-<td></td>
-<td><b>BCB and Statistics program, University of Toronto</b><br />
-<a href="mailto:chunhin.lee@mail.utoronto.ca">chunhin.lee@mail.utoronto.ca</a><br />
-                                                                                         </td>
+<td><div class="figure">
+<img src="images/justin.jpg" width="150" />
+
+</div></td>
+<td><p>| <b>BCB and Statistics program, University of Toronto</b> | <a href="mailto:chunhin.lee@mail.utoronto.ca">chunhin.lee@mail.utoronto.ca</a> |                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
