Minor spacing fix

--- a/members.html
+++ b/members.html
@@ -270,7 +270,9 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <img src="images/justin.jpg" width="150" />
 
 </div></td>
-<td><p>| <b>BCB and Statistics program, University of Toronto</b> | <a href="mailto:chunhin.lee@mail.utoronto.ca">chunhin.lee@mail.utoronto.ca</a> |                                                                                         </p></td>
+<td><p><b>BCB and Statistics program, University of Toronto</b><br />
+<a href="mailto:chunhin.lee@mail.utoronto.ca">chunhin.lee@mail.utoronto.ca</a><br />
+                                                                                         </p></td>
 </tr>
 </tbody>
 </table>
