Changed navbar colors to improve visibility

--- a/positions.html
+++ b/positions.html
@@ -211,6 +211,7 @@ $(document).ready(function () {
 <div id="apply-to-join-the-team" class="section level3">
 <h3>Apply to join the team!</h3>
 <p>Opportunities are available at various levels within the Computational Neurobiology lab at CAMH. Please contact Dr. Leon French if interested (<a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a>).</p>
+<p>Example projects are available at the <a href="./research.html">Research Interests</a> page. For most projects the data and base software code is already avaialble, providing a fast start to new research.</p>
 <div id="graduate-students" class="section level4">
 <h4>Graduate Students</h4>
 <p>We are recruiting graduate students with interests in bioinformatics, computational biology, and neuroscience.</p>
