--- a/members.html
+++ b/members.html
@@ -78,7 +78,7 @@ h6 {
 }
 </style>
 
-<link rel="stylesheet" href="includes/main.css" type="text/css" />
+<link rel="stylesheet" href="includes\main.css" type="text/css" />
 
 </head>
 
@@ -225,14 +225,14 @@ The table widths are relative to the longest column, hence the &nbsp; &nbsp; pad
 <img src="images/Leon.picture.jpg" />
 
 </div></td>
-<td><p><b>Independent Scientist, Campbell Family Mental Health Research Institute at CAMH</b><br />
-<b>Assistant Professor (status only), Department of Psychiatry, University of Toronto</b><br />
-<b> Associate Member, Institute of Medical Science, University of Toronto</b><br />
-Toronto, Ontario, Canada<br />
- <a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a><br />
- <a href="https://ca.linkedin.com/in/leonfrench">LinkedIn profile</a><br />
- <a href="https://scholar.google.ca/citations?hl=en&amp;user=zBJxfPEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Publication list on Google Scholar</a><br />
- <a href="https://www.researchgate.net/profile/Leon_French">ResearchGate profile</a></p></td>
+<td><div style="white-space: pre-line;"><b>Independent Scientist, Campbell Family Mental Health Research Institute at CAMH</b>
+<b>Assistant Professor (status only), Department of Psychiatry, University of Toronto</b>
+<b> Associate Member, Institute of Medical Science, University of Toronto</b>
+Toronto, Ontario, Canada
+ <a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a>
+ <a href="https://ca.linkedin.com/in/leonfrench">LinkedIn profile</a>
+ <a href="https://scholar.google.ca/citations?hl=en&amp;user=zBJxfPEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Publication list on Google Scholar</a>
+ <a href="https://www.researchgate.net/profile/Leon_French">ResearchGate profile</a></div></td>
 </tr>
 </tbody>
 </table>
@@ -251,9 +251,9 @@ Toronto, Ontario, Canada<br />
 <img src="images/derek.jpeg" />
 
 </div></td>
-<td><p><b>MSc, University of Toronto</b><br />
-d(dot)howard(at)mail.utoronto.ca<br />
-                                                                                         </p></td>
+<td><div style="white-space: pre-line;"><b>MSc, University of Toronto</b>
+d(dot)howard(at)mail.utoronto.ca
+                                                                                         </div></td>
 </tr>
 </tbody>
 </table>
@@ -272,9 +272,30 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <img src="images/jenny.png" width="150" />
 
 </div></td>
-<td><p><b>BCB and Computer Science, University of Toronto</b><br />
-<a href="mailto:jenny.yin@mail.utoronto.ca">jenny.yin@mail.utoronto.ca</a><br />
-                                                                                         </p></td>
+<td><div style="white-space: pre-line;"><b>BCB and Computer Science, University of Toronto</b>
+<a href="mailto:jenny.yin@mail.utoronto.ca">jenny.yin@mail.utoronto.ca</a>
+                                                                                         </div></td>
+</tr>
+</tbody>
+</table>
+<hr />
+</div>
+<div id="linwen-huang-undergraduate-project-student" class="section level4">
+<h4>Linwen Huang, Undergraduate Project Student</h4>
+<table>
+<colgroup>
+<col width="37%" />
+<col width="62%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td><div class="figure">
+<img src="images/linwen.png" width="150" />
+
+</div></td>
+<td><div style="white-space: pre-line;"><b>LMP and Computer Science, University of Toronto</b>
+<a href="mailto:linwenh.huang@mail.utoronto.ca">linwenh.huang@mail.utoronto.ca</a>
+                                                                                         </div></td>
 </tr>
 </tbody>
 </table>
@@ -296,9 +317,9 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <img src="images/justin.jpg" width="150" />
 
 </div></td>
-<td><p><b>BCB and Statistics program, University of Toronto</b><br />
-<a href="mailto:chunhin.lee@mail.utoronto.ca">chunhin.lee@mail.utoronto.ca</a><br />
-                                                                                         </p></td>
+<td><div style="white-space: pre-line;"><b>BCB and Statistics program, University of Toronto</b>
+<a href="mailto:chunhin.lee@mail.utoronto.ca">chunhin.lee@mail.utoronto.ca</a>
+                                                                                         </div></td>
 </tr>
 </tbody>
 </table>
@@ -317,9 +338,9 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <img src="images/alana.jpg" width="150" />
 
 </div></td>
-<td><p><b>BCB and Computer Science, University of Toronto</b><br />
-<a href="mailto:alana.man@mail.utoronto.ca">alana.man@mail.utoronto.ca</a><br />
-                                                                                         </p></td>
+<td><div style="white-space: pre-line;"><b>BCB and Computer Science, University of Toronto</b>
+<a href="mailto:alana.man@mail.utoronto.ca">alana.man@mail.utoronto.ca</a>
+                                                                                         </div></td>
 </tr>
 </tbody>
 </table>
@@ -338,9 +359,9 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <img src="https://i.stack.imgur.com/okDq7t.jpg" />
 
 </div></td>
-<td><p><b>Engineering Science, University of Toronto</b><br />
-<a href="mailto:jacob.ritchie@mail.utoronto.ca">jacob.ritchie@mail.utoronto.ca</a><br />
-                                                                                         </p></td>
+<td><div style="white-space: pre-line;"><b>Engineering Science, University of Toronto</b>
+<a href="mailto:jacob.ritchie@mail.utoronto.ca">jacob.ritchie@mail.utoronto.ca</a>
+                                                                                         </div></td>
 </tr>
 </tbody>
 </table>
