--- a/members.html
+++ b/members.html
@@ -101,6 +101,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -295,6 +298,27 @@ d(dot)howard(at)mail.utoronto.ca
 </div></td>
 <td><div style="white-space: pre-line;"><b>LMP and Computer Science, University of Toronto</b>
 <a href="mailto:linwenh.huang@mail.utoronto.ca">linwenh.huang@mail.utoronto.ca</a>
+                                                                                         </div></td>
+</tr>
+</tbody>
+</table>
+<hr />
+</div>
+<div id="joelle-jee-undergraduate-project-student" class="section level4">
+<h4>Joelle Jee, Undergraduate Project Student</h4>
+<table>
+<colgroup>
+<col width="37%" />
+<col width="62%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td><div class="figure">
+<img src="images/joelle.JPG" width="150" />
+
+</div></td>
+<td><div style="white-space: pre-line;"><b>BCB, University of Toronto</b>
+<a href="mailto:joelle.jee@mail.utoronto.ca">joelle.jee@mail.utoronto.ca</a>
                                                                                          </div></td>
 </tr>
 </tbody>
