Added affiliation, updated members table

--- a/members.html
+++ b/members.html
@@ -225,7 +225,8 @@ The table widths are relative to the longest column, hence the &nbsp; &nbsp; pad
 <img src="images/Leon.picture.jpg" />
 
 </div></td>
-<td><p><b>Independent Scientist, Campbell Family Mental Health Research Institute at CAMH</b><br />
+<td><p><b>Independent Scientist, Krembil Centre for Neuroinformatics, </b><br />
+<b>Campbell Family Mental Health Research Institute at CAMH</b><br />
 <b>Assistant Professor (status only), Department of Psychiatry, University of Toronto</b><br />
 <b> Associate Member, Institute of Medical Science, University of Toronto</b><br />
 Toronto, Ontario, Canada<br />
@@ -253,6 +254,29 @@ Toronto, Ontario, Canada<br />
 </div></td>
 <td><p><b>MSc, University of Toronto</b><br />
 d(dot)howard(at)mail.utoronto.ca<br />
+                                                                                         </p></td>
+</tr>
+</tbody>
+</table>
+<hr />
+</div>
+<div id="pegah-abed-esfahani-research-analyst" class="section level4">
+<h4>Pegah Abed-Esfahani, Research Analyst</h4>
+<table>
+<colgroup>
+<col width="37%" />
+<col width="62%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td><div class="figure">
+<img src="images/pegah.png" width="150" />
+
+</div></td>
+<td><p><b>Research Analyst in Machine Learning</b><br />
+<b>MSc, Computer Science, University of Toronto</b><br />
+<a href="mailto:pegah.abedesfahani@mail.utoronto.ca">pegah.abedesfahani@mail.utoronto.ca</a><br />
+<a href="https://www.linkedin.com/in/pegah-abed/">LinkedIn profile</a><br />
                                                                                          </p></td>
 </tr>
 </tbody>
