--- a/members.html
+++ b/members.html
@@ -101,6 +101,9 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
 }
@@ -225,15 +228,15 @@ The table widths are relative to the longest column, hence the &nbsp; &nbsp; pad
 <img src="images/Leon.picture.jpg" />
 
 </div></td>
-<td><p><b>Independent Scientist, Krembil Centre for Neuroinformatics, </b><br />
-<b>Campbell Family Mental Health Research Institute at CAMH</b><br />
-<b>Assistant Professor (status only), Department of Psychiatry, University of Toronto</b><br />
-<b> Associate Member, Institute of Medical Science, University of Toronto</b><br />
-Toronto, Ontario, Canada<br />
- <a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a><br />
- <a href="https://ca.linkedin.com/in/leonfrench">LinkedIn profile</a><br />
- <a href="https://scholar.google.ca/citations?hl=en&amp;user=zBJxfPEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Publication list on Google Scholar</a><br />
- <a href="https://www.researchgate.net/profile/Leon_French">ResearchGate profile</a></p></td>
+<td><div style="white-space: pre-line;"><b>Independent Scientist, Krembil Centre for Neuroinformatics, </b>
+<b>Campbell Family Mental Health Research Institute at CAMH</b>
+<b>Assistant Professor (status only), Department of Psychiatry, University of Toronto</b>
+<b> Associate Member, Institute of Medical Science, University of Toronto</b>
+Toronto, Ontario, Canada
+ <a href="mailto:leon.french@camh.ca">leon.french@camh.ca</a>
+ <a href="https://ca.linkedin.com/in/leonfrench">LinkedIn profile</a>
+ <a href="https://scholar.google.ca/citations?hl=en&amp;user=zBJxfPEAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Publication list on Google Scholar</a>
+ <a href="https://www.researchgate.net/profile/Leon_French">ResearchGate profile</a></div></td>
 </tr>
 </tbody>
 </table>
@@ -252,9 +255,9 @@ Toronto, Ontario, Canada<br />
 <img src="images/derek.jpeg" />
 
 </div></td>
-<td><p><b>MSc, University of Toronto</b><br />
-d(dot)howard(at)mail.utoronto.ca<br />
-                                                                                         </p></td>
+<td><div style="white-space: pre-line;"><b>MSc, University of Toronto</b>
+d(dot)howard(at)mail.utoronto.ca
+                                                                                         </div></td>
 </tr>
 </tbody>
 </table>
@@ -273,11 +276,34 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <img src="images/pegah.png" width="150" />
 
 </div></td>
-<td><p><b>Research Analyst in Machine Learning</b><br />
-<b>MSc, Computer Science, University of Toronto</b><br />
-<a href="mailto:pegah.abedesfahani@mail.utoronto.ca">pegah.abedesfahani@mail.utoronto.ca</a><br />
-<a href="https://www.linkedin.com/in/pegah-abed/">LinkedIn profile</a><br />
-                                                                                         </p></td>
+<td><div style="white-space: pre-line;"><b>Research Analyst in Machine Learning</b>
+<b>MSc, Computer Science, University of Toronto</b>
+<a href="mailto:pegah.abedesfahani@mail.utoronto.ca">pegah.abedesfahani@mail.utoronto.ca</a>
+<a href="https://www.linkedin.com/in/pegah-abed/">LinkedIn profile</a>
+                                                                                         </div></td>
+</tr>
+</tbody>
+</table>
+<hr />
+</div>
+<div id="wennie-wu-masters-student" class="section level4">
+<h4>Wennie Wu, Master’s Student</h4>
+<table>
+<colgroup>
+<col width="37%" />
+<col width="62%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td><div class="figure">
+<img src="images/wennie.jpg" width="150" />
+
+</div></td>
+<td><div style="white-space: pre-line;"><b>Master’s Student</b>
+<b>BSc, Biomedical Computing, Queen’s University</b>
+<a href="mailto:wennie.wu@mail.utoronto.ca">wennie.wu@mail.utoronto.ca</a>
+<a href="https://www.linkedin.com/in/wennie-wu-047755142/">LinkedIn profile</a>
+                                                                                         </div></td>
 </tr>
 </tbody>
 </table>
@@ -299,9 +325,9 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <img src="images/jenny.png" width="150" />
 
 </div></td>
-<td><p><b>BCB and Computer Science, University of Toronto</b><br />
-<a href="mailto:jenny.yin@mail.utoronto.ca">jenny.yin@mail.utoronto.ca</a><br />
-                                                                                         </p></td>
+<td><div style="white-space: pre-line;"><b>BCB and Computer Science, University of Toronto</b>
+<a href="mailto:jenny.yin@mail.utoronto.ca">jenny.yin@mail.utoronto.ca</a>
+                                                                                         </div></td>
 </tr>
 </tbody>
 </table>
@@ -320,9 +346,9 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <img src="images/linwen.png" width="150" />
 
 </div></td>
-<td><p><b>LMP and Computer Science, University of Toronto</b><br />
-<a href="mailto:linwenh.huang@mail.utoronto.ca">linwenh.huang@mail.utoronto.ca</a><br />
-                                                                                         </p></td>
+<td><div style="white-space: pre-line;"><b>LMP and Computer Science, University of Toronto</b>
+<a href="mailto:linwenh.huang@mail.utoronto.ca">linwenh.huang@mail.utoronto.ca</a>
+                                                                                         </div></td>
 </tr>
 </tbody>
 </table>
@@ -341,9 +367,9 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <img src="images/joelle.JPG" width="150" />
 
 </div></td>
-<td><p><b>BCB, University of Toronto</b><br />
-<a href="mailto:joelle.jee@mail.utoronto.ca">joelle.jee@mail.utoronto.ca</a><br />
-                                                                                         </p></td>
+<td><div style="white-space: pre-line;"><b>BCB, University of Toronto</b>
+<a href="mailto:joelle.jee@mail.utoronto.ca">joelle.jee@mail.utoronto.ca</a>
+                                                                                         </div></td>
 </tr>
 </tbody>
 </table>
@@ -362,9 +388,9 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <img src="images/justin.jpg" width="150" />
 
 </div></td>
-<td><p><b>BCB and Statistics program, University of Toronto</b><br />
-<a href="mailto:chunhin.lee@mail.utoronto.ca">chunhin.lee@mail.utoronto.ca</a><br />
-                                                                                         </p></td>
+<td><div style="white-space: pre-line;"><b>BCB and Statistics program, University of Toronto</b>
+<a href="mailto:chunhin.lee@mail.utoronto.ca">chunhin.lee@mail.utoronto.ca</a>
+                                                                                         </div></td>
 </tr>
 </tbody>
 </table>
@@ -383,9 +409,9 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <img src="images/alana.jpg" width="150" />
 
 </div></td>
-<td><p><b>BCB and Computer Science, University of Toronto</b><br />
-<a href="mailto:alana.man@mail.utoronto.ca">alana.man@mail.utoronto.ca</a><br />
-                                                                                         </p></td>
+<td><div style="white-space: pre-line;"><b>BCB and Computer Science, University of Toronto</b>
+<a href="mailto:alana.man@mail.utoronto.ca">alana.man@mail.utoronto.ca</a>
+                                                                                         </div></td>
 </tr>
 </tbody>
 </table>
@@ -404,9 +430,9 @@ d(dot)howard(at)mail.utoronto.ca<br />
 <img src="https://i.stack.imgur.com/okDq7t.jpg" />
 
 </div></td>
-<td><p><b>Engineering Science, University of Toronto</b><br />
-<a href="mailto:jacob.ritchie@mail.utoronto.ca">jacob.ritchie@mail.utoronto.ca</a><br />
-                                                                                         </p></td>
+<td><div style="white-space: pre-line;"><b>Engineering Science, University of Toronto</b>
+<a href="mailto:jacob.ritchie@mail.utoronto.ca">jacob.ritchie@mail.utoronto.ca</a>
+                                                                                         </div></td>
 </tr>
 </tbody>
 </table>
